fixed resizing, fixed portfolio collapsing on smaller monitors

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ body {
 
 .myportfolio {
   width: 65%;
+  min-width:max-content;
   margin-left: 30px;
   height: 80%;
   padding: 5px 10px 10px 10px;
@@ -84,6 +85,7 @@ body {
 
 .mynfts {
   width: 25%;
+  min-width: fit-content;
   margin-left: 30px;
   height: 650px;
   padding: 5px 10px 10px 10px;
@@ -102,6 +104,7 @@ body {
   display:flex;
   flex-direction:row;
   height: 100px;
+  min-width: fit-content;
 }
 
 .col {
